--- a/tasks/templates/tasks/delete_task.html
+++ b/tasks/templates/tasks/delete_task.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Do</title>
+    <title>To</title>
     <link rel="stylesheet" type="text/css" href="{% static 'tasks/css/style.css' %}">
 </head>
 <body>
-    <h3>Delete Task</h3>
+    <h3>Update Task</h3>
     <div class="container-task del">
         <div class="task message-task">Do you want to delete '{{task}}'?</div>
         <div class="form-block">
